<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.JarrodEventFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:background="@color/jarrod_bkg"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/jarrod_bkg">

            <TableLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                app:layout_constraintBottom_toTopOf="@+id/guideline22"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    tools:ignore="UselessParent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imageView5"
                            android:layout_width="217dp"
                            android:layout_height="0dp"
                            android:layout_gravity="center"
                            android:layout_weight="0.1"
                            android:importantForAccessibility="no"
                            android:padding="20dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/jarrod_coffee_logo" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="91dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginVertical="5dp"
                        android:layout_weight="20"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:paddingVertical="10dp">

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/button5"
                            style="@style/PrimaryColoredButton"
                            android:layout_width="134dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginBottom="5dp"
                            android:text="@string/home_btn_txt"
                            android:textColor="@color/white" />

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/button6"
                            style="@style/PrimaryColoredButton"
                            android:layout_width="134dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginBottom="5dp"
                            android:text="@string/events_btn_txt"
                            android:textColor="@color/white" />

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/button7"
                            style="@style/PrimaryColoredButton"
                            android:layout_width="134dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/contact_us_btn_txt"
                            android:textColor="@color/white"
                            tools:ignore="TextSizeCheck" />
                    </LinearLayout>
                </TableRow>

            </TableLayout>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="206dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline30"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="423dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button8"
                style="@style/PrimaryColoredButton"
                android:layout_width="253dp"
                android:layout_height="66dp"
                android:text="@string/launch_to_see_events_txt"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline22"
                tools:ignore="TextSizeCheck" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>