<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.JarrodDetailFragment"
    >

    <data>

    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/jarrod_bkg">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/jarrod_bkg">

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@+id/guideline14"
                app:layout_constraintEnd_toStartOf="@+id/guideline23"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline16">


                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"

                    android:src="@drawable/jarrod_coffee_logo"
                    android:importantForAccessibility="no" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:contentDescription="@null"
                android:paddingHorizontal="10dp"
                android:paddingVertical="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/bagel_sandwiches1"
                app:layout_constraintBottom_toTopOf="@+id/guideline15"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline14" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="4dp"
                android:gravity="center"
                tools:text="Chosen Food or Drink"
                android:text=""
                android:textSize="25sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/guideline29"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView3" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="557dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="209dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="381dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="177dp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@+id/guideline14"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline23"
                app:layout_constraintTop_toTopOf="@+id/guideline16">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button"
                    style="@style/PrimaryColoredButton"
                    android:layout_width="183dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:text="@string/home_btn_txt"
                    android:textColor="#FFCCBC" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button2"
                    style="@style/PrimaryColoredButton"
                    android:layout_width="183dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginVertical="10dp"
                    android:text="@string/events_btn_txt"
                    android:textColor="#FFCCBC" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button3"
                    style="@style/PrimaryColoredButton"
                    android:layout_width="183dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/contact_us_btn_txt"
                    android:textColor="#FFCCBC" />
            </LinearLayout>

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_to_cart_txt"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline23"
                app:layout_constraintTop_toTopOf="@+id/guideline13" />

            <TableLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toTopOf="@+id/guideline13"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline29"
                app:layout_constraintVertical_bias="0.473">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center_vertical"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:paddingVertical="5dp"
                    >

                    <TextView
                        android:id="@+id/label_size"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="25sp"
                        android:textColor="@color/white"
                        android:layout_weight="0.5"
                        android:paddingHorizontal="5dp"
                        android:layout_gravity="center_vertical"
                        android:text="@string/size_label_txt" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="25sp"
                        android:textColor="@color/white"
                        android:layout_gravity="center_vertical"
                        android:paddingHorizontal="5dp"
                        android:layout_weight="0.6"
                        tools:text="16 oz"
                        android:text="" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center_vertical"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:paddingVertical="5dp"
                    >

                    <TextView
                        android:id="@+id/price_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/price_txt"
                        android:textSize="25sp"
                        android:textColor="@color/white"
                        android:layout_weight="0.5"
                        android:paddingHorizontal="5dp"
                        android:layout_gravity="center_vertical" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textSize="25sp"
                        android:paddingHorizontal="5dp"
                        android:layout_gravity="center_vertical"
                        android:textColor="@color/white"
                        android:layout_weight="0.6"
                        tools:text="$9.99" />
                </TableRow>
            </TableLayout>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="628dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline29"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="439dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</layout>